@@ -212,6 +212,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       server_working_dir_ class variables.
     - pulsemanager.cpp: make start () wrap the "real" OS-specific start
       functions.
+    - pulsemanager.{cpp,h}: new function create_client_dir ().
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
